fix readability on phone

--- a/src/app/components/macros/macros.scss
+++ b/src/app/components/macros/macros.scss
@@ -85,7 +85,7 @@
       }
 
       .bar-label {
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 500;
         line-height: 1;
         white-space: nowrap;
